@@ -5,4 +5,4 @@ When using pyinstaller
 3) pip install pyqt5 numpy==1.15.2 scipy cython matplotlib (numpy1.16 doesn't play well with pyinstaller
 4) pip install refnx periodictable pyinstaller
 5) Change the version number in the motofit.spec file
-6) pyinstall motofit.spec
+6) pyinstaller motofit.spec
