@@ -1,3 +1,7 @@
+import pandas
+import h5py
+import xlrd
+
 if __name__ == "__main__":
     from refnx.reduce import main
     main()
