@@ -15,7 +15,7 @@ a = Analysis(['slim.py'],
              binaries=[],
              datas=[uiloc],
              hiddenimports=['refnx', 'refnx.dataset', 'refnx.reduce', 'refnx.reflect', 'refnx.util',
-                            'refnx._lib', 'refnx.util', 'refnx.reduce._app',
+                            'refnx._lib', 'refnx.util', 'refnx.reduce._app', 'pandas',
                             'h5py.defs', 'h5py.utils', 'h5py.h5ac', 'h5py._proxy'],
              hookspath=[],
              runtime_hooks=[],
